--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "homepage": "https://ZakariaBelhfid.github.io/Personal_Portfolio",
   "name": "personalportfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -21,7 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scroll": "^1.9.0",
-    "react-tilt": "^0.1.4",
+    "react-parallax-tilt": "^1.7.266",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.149.0",
     "vanilla-tilt": "^1.8.1"
@@ -32,8 +29,8 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "gh-pages": "^6.2.0",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.2.6",
-    "vite": "^4.1.0"
+    "vite": "^6.0.3"
   }
 }
